--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <main class="container">
         <header class="hero-section fade-in">
             <div class="hero-text">
-                <span class="greeting">Chào mừng bạn, mình là</span>
+                <span class="greeting">Xin chào, mình là</span>
                 <h1 class="name">Lê Đức Phát</h1>
-                <p class="role">Học sinh / Anime & Manga Lover 🚀</p>
+                <p class="role">Schule</p>
                 <div class="hero-btns">
-                    <a href="#contact" class="btn-primary">Kết nối ngay</a>
-                    <a href="#about" class="btn-secondary">Tìm hiểu thêm</a>
+                    <a href="#contact" class="btn-primary">Konnet me</a>
+                    <a href="#about" class="btn-secondary">More</a>
                 </div>
             </div>
             <div class="hero-image">
@@ -52,8 +52,8 @@
             <h2 class="section-title"><i class="fas fa-star"></i> Sở Thích</h2>
             <div class="card">
                 <div class="hobbies-grid">
-                    <span class="hobby-tag"><i class="fas fa-tv"></i> Anime sehen🌸</span>
-                    <span class="hobby-tag"><i class="fas fa-book"></i> Manga, Buch lesen📚</span>
+                    <span class="hobby-tag"><i class="fas fa-tv"></i> Anime sehen</span>
+                    <span class="hobby-tag"><i class="fas fa-book"></i> Manga, Buch lesen</span>
                     <span class="hobby-tag"><i class="fas fa-headphones"></i> Musik</span>
                     <span class="hobby-tag"><i class="fas fa-utensils"></i> Kochen</span>
                     <span class="hobby-tag"><i class="fas fa-gamepad"></i> Games</span>
@@ -64,7 +64,7 @@
         </section>
 
         <section id="contact" class="section fade-in delay-3">
-            <h2 class="section-title"><i class="fas fa-paper-plane"></i> Mạng Xã Hội</h2>
+            <h2 class="section-title"><i class="fas fa-paper-plane"></i> Social</h2>
             <div class="links-grid">
                 <a href="https://www.facebook.com/anh.daden.165033?locale=vi_VN" target="_blank" class="social-btn facebook">
                     <i class="fab fa-facebook-f"></i> Facebook
