--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="dark-mode"> <nav class="navbar">
+<body class="dark-mode">
+
+    <nav class="navbar">
         <div class="nav-content">
             <a href="#" class="logo">Phát Lê.</a>
             <ul class="nav-links">
@@ -17,7 +19,8 @@
                 <li><a href="#contact">Liên Hệ</a></li>
                 <li>
                     <button id="theme-toggle" class="theme-btn">
-                        <i class="fas fa-sun"></i> </button>
+                        <i class="fas fa-sun"></i> 
+                    </button>
                 </li>
             </ul>
         </div>
@@ -28,10 +31,10 @@
             <div class="hero-text">
                 <span class="greeting">Xin chào, mình là</span>
                 <h1 class="name">Lê Đức Phát</h1>
-                <p class="role">Schule</p>
+                <p class="role">Schule / Liebe Technologie 🚀</p>
                 <div class="hero-btns">
-                    <a href="#contact" class="btn-primary">Konnet me</a>
-                    <a href="#about" class="btn-secondary">More</a>
+                    <a href="#contact" class="btn-primary">Kontaktieren mich</a>
+                    <a href="#about" class="btn-secondary">Tìm hiểu thêm</a>
                 </div>
             </div>
             <div class="hero-image">
@@ -40,7 +43,7 @@
         </header>
 
         <section id="about" class="section fade-in delay-1">
-            <h2 class="section-title"><i class="fas fa-user-circle"></i> Về Mình</h2>
+            <h2 class="section-title"><i class="fas fa-user-circle"></i> About me</h2>
             <div class="card about-card">
                 <p>
                     Hallo👋, ich heiße <strong>Phat</strong> und bin 17 Jahre alt. Ich komme aus Vietnam. Ich lebe jetzt in Bai Chay.  Ich spreche sehr gut Vietnamesisch, aber ich spreche nur ein bisschen Deutsch.
@@ -49,16 +52,15 @@
         </section>
 
         <section id="hobbies" class="section fade-in delay-2">
-            <h2 class="section-title"><i class="fas fa-star"></i> Sở Thích</h2>
+            <h2 class="section-title"><i class="fas fa-star"></i> Hobbys</h2>
             <div class="card">
                 <div class="hobbies-grid">
-                    <span class="hobby-tag"><i class="fas fa-tv"></i> Anime sehen</span>
-                    <span class="hobby-tag"><i class="fas fa-book"></i> Manga, Buch lesen</span>
+                    <span class="hobby-tag"><i class="fas fa-tv"></i> Anime sehen </span>
+                    <span class="hobby-tag"><i class="fas fa-book"></i> Manga, Buch lesen </span>
                     <span class="hobby-tag"><i class="fas fa-headphones"></i> Musik</span>
                     <span class="hobby-tag"><i class="fas fa-utensils"></i> Kochen</span>
                     <span class="hobby-tag"><i class="fas fa-gamepad"></i> Games</span>
                     <span class="hobby-tag"><i class="fas fa-running"></i> Sport</span>
-                    <span class="hobby-tag"><i class="fas fa-bed"></i> Schlafen</span>
                 </div>
             </div>
         </section>
@@ -83,7 +85,7 @@
     </main>
 
     <footer class="footer">
-        <p>© 2026 Lê Đức Phát. Design with 💜</p>
+        <p>© 2026 Phat Le. Design with 💜</p>
     </footer>
 
     <script src="script.js"></script>
