--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </main>
 
     <footer class="footer">
-        <p>© 2026 Phat Le. Design with 💜</p>
+        <p>© 2026 Phat Le. Design with ❤️</p>
     </footer>
 
     <script src="script.js"></script>
